added transform property to box and padding

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <section class="section">
     <div class="container">
       <h1 class="title">
-        How many People are in Space
+        Movie Test Api
       </h1>
       <p class="subtitle">
-        My first website with <strong>Bulma</strong>!
+        My first website with <strong>Bulma and API's</strong>!
       </p>
     </div>
   </section>
