--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class="title">
         Movie Test Api
       </h1>
-      <p class="subtitle">
+      <p class="subtitle is-success">
         My first website with <strong>Bulma and API's</strong>!
       </p>
     </div>
